--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "homepage": "https://AlexanderVasilenko99.github.io/car-rental",
   "name": "car-rental",
-  "homepage": "https://AlexanderVasilenko99.github.io/CAR-RENTAL",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,11 +36,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
