--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google-map-react": "^2.2.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
@@ -19,6 +21,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-router-hash-link": "^2.4.7",
     "axios": "^1.4.0",
+    "google-map-react": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -62,6 +65,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/google-map-react": "^2.1.9",
     "@types/react-modal": "^3.16.1",
     "@types/video-react": "^0.15.2",
     "gh-pages": "^6.0.0"
